--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.quiz.create.CreateQuizActivity">
+    tools:context=".ui.quiz.create.QuizConstructorActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
